tests/cases/compiler/ambientErrors1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/ambientErrors1.ts`, Apache-2.0 License

declare var x = 4;
//~^ ERROR: Initializers are not allowed in ambient contexts.